; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-policy-smq.c_init_allocator.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-policy-smq.c_init_allocator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.entry_alloc = type { i32, i32, %struct.entry_space*, i32 }
%struct.entry_space = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.entry_alloc*, %struct.entry_space*, i32, i32)* @init_allocator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_allocator(%struct.entry_alloc* %0, %struct.entry_space* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.entry_alloc*, align 8
  %6 = alloca %struct.entry_space*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.entry_alloc* %0, %struct.entry_alloc** %5, align 8
  store %struct.entry_space* %1, %struct.entry_space** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.entry_space*, %struct.entry_space** %6, align 8
  %11 = load %struct.entry_alloc*, %struct.entry_alloc** %5, align 8
  %12 = getelementptr inbounds %struct.entry_alloc, %struct.entry_alloc* %11, i32 0, i32 2
  store %struct.entry_space* %10, %struct.entry_space** %12, align 8
  %13 = load %struct.entry_alloc*, %struct.entry_alloc** %5, align 8
  %14 = getelementptr inbounds %struct.entry_alloc, %struct.entry_alloc* %13, i32 0, i32 0
  store i32 0, i32* %14, align 8
  %15 = load i32, i32* %7, align 4
  %16 = load %struct.entry_alloc*, %struct.entry_alloc** %5, align 8
  %17 = getelementptr inbounds %struct.entry_alloc, %struct.entry_alloc* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 4
  %18 = load %struct.entry_alloc*, %struct.entry_alloc** %5, align 8
  %19 = getelementptr inbounds %struct.entry_alloc, %struct.entry_alloc* %18, i32 0, i32 3
  %20 = call i32 @l_init(i32* %19)
  %21 = load i32, i32* %7, align 4
  store i32 %21, i32* %9, align 4
  br label %22

22:                                               ; preds = %38, %4
  %23 = load i32, i32* %9, align 4
  %24 = load i32, i32* %8, align 4
  %25 = icmp ne i32 %23, %24
  br i1 %25, label %26, label %41

26:                                               ; preds = %22
  %27 = load %struct.entry_alloc*, %struct.entry_alloc** %5, align 8
  %28 = getelementptr inbounds %struct.entry_alloc, %struct.entry_alloc* %27, i32 0, i32 2
  %29 = load %struct.entry_space*, %struct.entry_space** %28, align 8
  %30 = load %struct.entry_alloc*, %struct.entry_alloc** %5, align 8
  %31 = getelementptr inbounds %struct.entry_alloc, %struct.entry_alloc* %30, i32 0, i32 3
  %32 = load %struct.entry_alloc*, %struct.entry_alloc** %5, align 8
  %33 = getelementptr inbounds %struct.entry_alloc, %struct.entry_alloc* %32, i32 0, i32 2
  %34 = load %struct.entry_space*, %struct.entry_space** %33, align 8
  %35 = load i32, i32* %9, align 4
  %36 = call i32 @__get_entry(%struct.entry_space* %34, i32 %35)
  %37 = call i32 @l_add_tail(%struct.entry_space* %29, i32* %31, i32 %36)
  br label %38

38:                                               ; preds = %26
  %39 = load i32, i32* %9, align 4
  %40 = add i32 %39, 1
  store i32 %40, i32* %9, align 4
  br label %22

41:                                               ; preds = %22
  ret void
}

declare dso_local i32 @l_init(i32*) #1

declare dso_local i32 @l_add_tail(%struct.entry_space*, i32*, i32) #1

declare dso_local i32 @__get_entry(%struct.entry_space*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
